# mdstresslab

./: .cproject  .gitignore  .project  .travis.yml  AtomisticSystem.cpp  AtomisticSystem.h  BoxConfiguration_8cpp.html  BoxConfiguration_8cpp__incl.dot  BoxConfiguration_8cpp__incl.map  BoxConfiguration_8cpp__incl.md5  BoxConfiguration_8cpp_source.html  BoxConfiguration_8h.html  BoxConfiguration_8h.js  BoxConfiguration_8h__dep__incl.dot  BoxConfiguration_8h__dep__incl.map  BoxConfiguration_8h__dep__incl.md5  BoxConfiguration_8h__incl.dot  BoxConfiguration_8h__incl.map  BoxConfiguration_8h__incl.md5  BoxConfiguration_8h_source.html  CMakeLists.txt  Configuration_8cpp.html  Configuration_8cpp__incl.dot  Configuration_8cpp__incl.map  Configuration_8cpp__incl.md5  Configuration_8cpp_source.html  Configuration_8h.html  Configuration_8h.js  Configuration_8h__dep__incl.dot  Configuration_8h__dep__incl.map  Configuration_8h__dep__incl.md5  Configuration_8h__incl.dot  Configuration_8h__incl.map  Configuration_8h__incl.md5  Configuration_8h_source.html  Constant_8cpp.html  Constant_8cpp__incl.dot  Constant_8cpp__incl.map  Constant_8cpp__incl.md5  Constant_8cpp_source.html  (+687 more)
docs/: Doxyfile.in
src/: .gitignore  AtomisticSystem.cpp  BoxConfiguration.cpp  CMakeLists.txt  Configuration.cpp  Constant.cpp  Constant.h  Exception.cpp  Hardy.cpp  InteratomicForces.cpp  Ldad.cpp  MethodHardySphere.cpp  MethodSphere.cpp  Mls.cpp  Rigidity.cpp  SpatialHash.cpp  Sphere.cpp  Stencil.cpp  Stress.cpp  SubConfiguration.cpp  Trigonometric.cpp  helper.hpp  kim.cpp  libMDStressLab++.dylib  main.cpp  neighbor_list.cpp  neighbor_list.h  readScript.cpp
tests/crack/: CMakeLists.txt  crack  kim_query.cpp  main.cpp
unit_tests/: CMakeLists.txt  compareStress.cpp
unit_tests/Testing/Temporary/: CTestCostData.txt
unit_tests/testDocs/: CMakeLists.txt  README  Si.def1_final.txt  Si.def1_init.txt  config.data  dump.final.1  dump.initial.0  hardy1.stress.ref  in.uniaxialstrain  ldad_Constant_Stress_ref.CauchyPushed  ldad_Constant_Stress_ref.CauchyPushed.ref  ldad_Constant_Stress_ref.DeformationGradient  ldad_Constant_Stress_ref.DeformationGradient.ref  ldad_Constant_Stress_ref.pushedGrids  ldad_Constant_ref.stress.ref  ldad_Trigonometric_ref.stress.ref  log.lammps  testDocs  testDocs.cpp
unit_tests/testGrid/: .gitignore  CMakeLists.txt  grid.data  testGrid  testGrid.cpp
unit_tests/testLDADLJ/: CMakeLists.txt  config_example.data  debug  debug_pull  debug_result  debug_total_length  ldad_constant_defReference.stress  ldad_constant_refReference.stress  ldad_trigonometric_defReference.stress  ldad_trigonometric_refReference.stress  testLDADLJ  testLDADLJ.cpp  testLDADLJ.out
unit_tests/testLDADLJ/00-Uniaxial_Strain_precise_grid_config_ldad_LJ/: config.data  dump.final.1  gpt_i_pushed_f_MLS.data  hardy_F.str  hardy_cauchy_pushed.str  hardy_pk1.str  in.uniaxialstrain  log.lammps  testrun.in  testrun.out
unit_tests/testLDADSW/: CMakeLists.txt  dump.final.1  dump.initial.0  ldad_constant_defReference.stress  ldad_constant_refReference.stress  ldad_trigonometric_defReference.stress  ldad_trigonometric_refReference.stress  testLDADSW  testLDADSW.cpp  testLDADSW.out
unit_tests/testLDADSW/000-Uniaxial_Strain_dump_novelocity_gcoor_preciselc_all_SW_hardy_ldad_all_trigonometry_mls_pushed/: README  gpt_i_pushed_f_MLS.data  grid_cauchy.data  grid_pk1.data  hardy_F.str  hardy_cauchy_direct.str  hardy_cauchy_pushed.str  hardy_i_cauchy_direct.str  hardy_i_pk1.str  hardy_kin_cauchy_direct.str  hardy_kin_cauchy_pushed.str  hardy_pk1.str  hardy_s_cauchy_direct.str  hardy_s_pk1.str  in.uniaxialstrain  species.data  testrun.in  testrun.out
unit_tests/testLDADSW/17-Uniaxial_Strain_dump_novelocity_gcoor_0_0_100_all_SW_hardy_ldad_all_trigonometry_mls_pushed/: Si.def1_final.txt  Si.def1_init.txt  gpt_i_pushed_f_MLS.data  grid_pk1.data  hardy_F.str  hardy_cauchy_direct.str  hardy_cauchy_pushed.str  hardy_kin_cauchy_pushed.str  hardy_pk1.str  hardy_s_cauchy_pushed.str  in.uniaxialstrain  log.lammps  testrun.in  testrun.out  testrun.out_0
unit_tests/testLJ/: .gitignore  CMakeLists.txt  config.data  hardy1Reference.stress  hardy2.stress  hardy3Reference.stress  hardy4.grid  hardy4.stress  hardy4Reference.stress  hardyPiolaReference.stress  hardyRandomCauchy.stress  hardyRandomCauchyReference.stress  hardyRandomPiola.stress  hardyRandomPiolaReference.stress  output  testLJ  testLJ.cpp  virialPiolaReference.stress
unit_tests/testLJ/results/: hardy1
unit_tests/testLJScript/: CMakeLists.txt  configCurrent.lmp  configReference.lmp  readScript.in
unit_tests/testMethodLdadConstSW/: CMakeLists.txt  config.data  testMethodLdadConstSW.cpp
unit_tests/testMethodSphere/: CMakeLists.txt  hardy2Reference.stress  hardyRandomPiolaReference.stress  testMethodSphere.cpp
unit_tests/testMethodUser/: CMakeLists.txt  Custom.cpp  Custom.h  hardy3Reference.stress  hardyRandomCauchyReference.stress  hardyRandomPiolaReference.stress  testMethodUser.cpp
unit_tests/testMls/: .gitignore  CMakeLists.txt  config.data  debug  dump.initial.0  hardyStress3.CauchyPushed  hardyStress3.DeformationGradient  mlsPushedReference.stress  testMls  testMls.cpp
unit_tests/testMlsCrack/: CMakeLists.txt  GeneralF.cpp  debug  debug_MLS_neighborlist  debug_pconfig  grid_one.data  grid_ten.data  hardyStress3.CauchyPushed  hardyStress3.DeformationGradient  hardyStress3.pushedGrids  testMlsCrack  testMlsCrack.cpp  testMlsCrack.out_16.29285_centered_27  testMlsCrack.out_16.29285_modified_T  testMlsCrack.out_3  testMlsCrack_MLSneighborlist_correct  testMlsCrack_debug.cpp.tmp
unit_tests/testSW/: .gitignore  CMakeLists.txt  hardy1.grid  hardy1.stress  hardy1Reference.stress  hardy2.stress  hardy2Reference.stress  hardy3.grid  hardy3Reference.stress  hardy4.stress  hardy4Reference.stress  hardyRandomCauchy.grid  hardyRandomCauchy.stress  hardyRandomCauchyReference.stress  hardyRandomPiola.grid  hardyRandomPiolaReference.stress  testSW  testSW.cpp
unit_tests/testSpatialHash/: .gitignore  CMakeLists.txt  random_hashed_vector.data  testSpatialHash  testSpatialHash.cpp
(+355 files in other folders)
