enable_testing()

add_subdirectory(testGrid)
add_subdirectory(testSpatialHash)
add_subdirectory(testLJ)
add_subdirectory(testSW)
add_subdirectory(testLDADSW)
add_subdirectory(testLDADLJ)
add_subdirectory(testMls)
add_subdirectory(testMlsCrack)
add_subdirectory(testDocs)
add_subdirectory(testMethodSphere)
add_subdirectory(testMethodUser)
